Bug 448549 - LSP errors are annoying
Summary: LSP errors are annoying
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-15 19:49 UTC by Nate Graham
Modified: 2022-01-21 20:57 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Annoying error (92.97 KB, image/png)
2022-01-15 19:49 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-01-15 19:49:07 UTC
Created attachment 145508 [details]
Annoying error

I uase Kate's LSP which is helpful for C++ development. However every time I open a bash file (such as my .bashrc), Kate's Output panel opens automatically and shows an error about how the bash LSP isn't installed. See attached screenshot.

And sure, okay, that's true. I don't have it installed. However I don't really have any interest in doing so. As a result, it's annoying to see this error message (which isn't really an error from my perspective) every time I open a bash file.

This is compounded by the fact that I typically keep borders hidden to save space, and the only way to hide this error is to click the "Output" button on the bottom border. So I need to show borders, hide the error message, and then hide borders again.

All in all this is fairly minor, but nonetheless annoying.
Comment 1 Waqar Ahmed 2022-01-15 19:50:49 UTC
Hmm, perhaps we should tune down the warning level for this. "info" sounds good for this case.
Comment 2 Nate Graham 2022-01-15 19:51:42 UTC
Would "Info" still make the output panel appear if it's currently not shown?
Comment 3 Waqar Ahmed 2022-01-15 19:53:57 UTC
Only if you configure it to be. See Behavior settings, Output view visibility is controlled by the config set there.

By default we only make the panel visible on errors and warnings I think.
Comment 4 Nate Graham 2022-01-15 19:54:58 UTC
Looks like by default it's errors only. So yeah, that would work!
Comment 5 Christoph Cullmann 2022-01-15 20:02:32 UTC
I would prefer this to be a warning, at least.
That would by default not trigger the output pane either.
If Mark is okay with that, too, feel free to change that.
Comment 6 Bug Janitor Service 2022-01-16 13:44:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/563
Comment 7 Christoph Cullmann 2022-01-16 18:48:16 UTC
Git commit 4c41f819206c690c6adc94f178c9a9c09dc0d9bb by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 16/01/2022 at 18:41.
Pushed by cullmann into branch 'master'.

step down warning level when LSP not found

Currently it gives an error which results in the widget popping up
everytime you open a file for which you don't have LSP. However, one may
have intentionally not installed the LSP for a language.

M  +4    -4    addons/lspclient/lspclientservermanager.cpp

https://invent.kde.org/utilities/kate/commit/4c41f819206c690c6adc94f178c9a9c09dc0d9bb
Comment 8 Christoph Cullmann 2022-01-21 20:57:25 UTC
Git commit 92a9c65e30b4b63b8b116eb5c8dcb1e1a2d867bc by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 21/01/2022 at 11:07.
Pushed by cullmann into branch 'release/21.12'.

step down warning level when LSP not found

Currently it gives an error which results in the widget popping up
everytime you open a file for which you don't have LSP. However, one may
have intentionally not installed the LSP for a language.

M  +4    -4    addons/lspclient/lspclientservermanager.cpp

https://invent.kde.org/utilities/kate/commit/92a9c65e30b4b63b8b116eb5c8dcb1e1a2d867bc