step down warning level when LSP not found

Currently it gives an error which results in the widget popping up
everytime you open a file for which you don't have LSP. However, one may
have intentionally not installed the LSP for a language.

BUG: 448549